# delisted.fyi

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
delisted/: __main__.py
scripts/: upload.sh
templates/: index.html.j2  styles.css
