[tool.poetry]
name = "delisted.fyi"
version = "0.1.0"
description = ""
authors = ["Dimitrios Dedoussis <dimitrios@dedouss.is>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
types-requests = "^2.27.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
